<resources>
    <string name="login_input_phone">请输入手机号</string>
    <string name="login_input_psw">请输入密码</string>
    <string name="login_forget_psw">忘记密码？</string>
    <string name="login_verification_code_login">验证码登录</string>
    <string name="login_register">注册</string>
    <string name="login_login_register_agree">登录注册即代表同意</string>
    <string name="login_user_protocol">《用户协议》</string>
    <string name="login_privacy_policy">《隐私政策》</string>
    <string name="login_agree_login">同意协议并登录</string>
    <string name="login_psw_login">密码登录</string>
    <string name="login_get_verification_code">获取验证码</string>
    <string name="login_input_verification_code">请输入验证码</string>
    <string name="login_verification_code_error">验证码不正确</string>
    <string name="login_send_code_success">发送验证码成功</string>
</resources>
